--- a/src/main/resources/com/example/demo/hello-view.fxml
+++ b/src/main/resources/com/example/demo/hello-view.fxml
@@ -8,8 +8,9 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.controller.HelloController">
    <children>
       <Button fx:id="btnSend" layoutX="138.0" layoutY="248.0" mnemonicParsing="false" onAction="#sendMessageAction" text="Отправить" />
-      <TextField fx:id="txtSenderId" layoutX="101.0" layoutY="84.0" promptText="Номер отправителя" />
+      <TextField fx:id="txtSenderId" layoutX="100.0" layoutY="80.0" promptText="Номер отправителя" />
       <TextField fx:id="txtRecipientId" layoutX="101.0" layoutY="135.0" promptText="Номер получателя" />
       <TextField fx:id="txtMsgText" layoutX="101.0" layoutY="191.0" promptText="Текст" />
+      <Button layoutX="284.0" layoutY="311.0" mnemonicParsing="false" onAction="#showListAction" text="Список" />
    </children>
 </AnchorPane>
